--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* This is exist css */
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -12,4 +13,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.paiedList {
+  border: 1px solid gray;
 }
