--- a/src/App.css
+++ b/src/App.css
@@ -22,24 +22,76 @@
 body {
   background: #ffb4b4;
   font-family: "Baloo Tammudu 2", cursive;
-  /* display: flex; */
-  /* text-align: center; */
-  /* justify-content: center; */
+  position: relative;
+  top: 100px;
 }
 
+/* welcome page */
+
+.App-header {
+  text-align: center;
+}
+.header_img {
+  position: relative;
+  left: -4px;
+}
 .welcome {
   color: white;
-}
-
-.btn_container {
-  display: flex;
+  text-align: center;
+  position: relative;
+  top: -16px;
+  margin-top: 0;
+  font-size: 20px;
 }
 
 .btnPatient,
 .btnDoctor {
   font-family: "Baloo Tammudu 2", cursive;
-  padding: 30px;
+  padding: 20px;
   color: white;
   background: #2a566b;
-  border-radius: 4px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+  border: none;
+  transition: background-color 2s;
+  transition: all 2s;
+  box-shadow: 2px 6px 6px rgb(164, 163, 163);
+}
+
+.btnDoctor:hover {
+  cursor: pointer;
+  padding: 25px;
+  border: 1px solid #2a566b;
+  color: #2a566b;
+  background-color: #fff;
+  font-weight: bolder;
+}
+
+.btnPatient:hover {
+  padding: 25px;
+  cursor: pointer;
+  font-weight: bolder;
+  border: 1px solid #2a566b;
+  color: #2a566b;
+  background-color: #fff;
+}
+
+.btnDoctor p {
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.btnPatient p {
+  font-size: 19px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.btnlogo {
+  width: 40px;
+  position: relative;
+  left: 9px;
 }
