Changed Patient paidlist style

--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,10 @@ body {
 .component_btn:hover {
   cursor: pointer;
 }
+
+/* .paiedList */
+
+.checkImg {
+  position: relative;
+  top: 20px;
+}
