change design for doctor

--- a/src/Form.css
+++ b/src/Form.css
@@ -68,3 +68,7 @@ Form {
   /* background-color: #fff; */
   /* font-weight: bolder; */
 }
+
+/*make a space between label and button*/
+input[type="text"] {
+}
