--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ body {
   box-shadow: 2px 6px 6px rgb(164, 163, 163);
 }
 
+.payment_btn:hover {
+  padding: 14px 32px;
+}
+
 .pay_p {
   font-size: 18px;
   margin: 0;
@@ -185,11 +189,22 @@ body {
 }
 
 .container_payment {
+  width: 70%;
   background: white;
   border-radius: 12px;
   padding: 0 20px;
   color: gray;
   margin: 15px;
   box-shadow: 2px 6px 8px rgb(164, 163, 163);
+  text-align: center;
+}
+
+.thankyou {
+  color: white;
+}
+
+.thankyou {
+  /* background: #2a566b; */
+  border-radius: 8px;
   text-align: center;
 }
