--- a/src/Form.css
+++ b/src/Form.css
@@ -13,6 +13,15 @@ Form {
   box-shadow: 2px 6px 8px grey;
 }
 
+/*make a space between label and button*/
+.formInput label input {
+  margin-right: 10px;
+}
+
+.formLogo {
+  font-size: xx-large;
+}
+
 .formSubmitButton {
   background: #2a566b;
   border-radius: 14px;
@@ -67,8 +76,4 @@ Form {
   /* color: #2a566b; */
   /* background-color: #fff; */
   /* font-weight: bolder; */
-}
-
-/*make a space between label and button*/
-input[type="text"] {
 }
