--- a/src/Form.css
+++ b/src/Form.css
@@ -49,6 +49,16 @@ label {
   margin: 10px 10px;
 }
 
+input {
+  width: 75%;
+}
+
+textarea {
+  width: 75%;
+  height: calc(1.3em * 5);
+  line-height: 1.5;
+}
+
 .formSubmitButton {
   background: #2a566b;
   border-radius: 14px;
