--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
     transform: rotate(360deg);
   }
 }
+#root {
+  margin: 0;
+}
 
 .paiedList {
   border: 1px solid gray;
@@ -22,8 +25,15 @@
 body {
   background: #ffb4b4;
   font-family: "Baloo Tammudu 2", cursive;
-  position: relative;
+  /* position: relative; */
   top: 10px;
+}
+/* footer */
+footer {
+  color: gray;
+  text-align: center;
+  background: #2a566b;
+  width: 100%;
 }
 
 /* welcome page */
@@ -53,7 +63,7 @@ body {
 
 .btnPatient,
 .btnDoctor {
-  font-family: "Baloo Tammudu 2", cursive;
+  /* font-family: "Baloo Tammudu 2", cursive; */
   padding: 15px;
   color: white;
   background: #2a566b;
@@ -69,17 +79,17 @@ body {
 
 .btnDoctor:hover {
   cursor: pointer;
-  font-size: 30px;
+  /* font-size: 30px; */
   /* color: #2a566b; */
   opacity: 0.6;
-  font-weight: bolder;
+  /* font-weight: bolder; */
 }
 
 .btnPatient:hover {
   cursor: pointer;
   opacity: 0.6;
-  font-weight: bolder;
-  font-size: 30px;
+  /* font-weight: bolder; */
+  /* font-size: 30px; */
   /* color: #2a566b; */
 }
 
@@ -114,13 +124,11 @@ body {
 .welcome_greeting {
   text-align: center;
 }
-.logo_home {
-  margin: 0 auto;
-}
 
-.patient_topLogo {
+.header_logo_container {
+  margin: 0 8px;
   display: flex;
-  margin: 0 auto;
+  justify-content: space-between;
 }
 
 .patient_container p {
@@ -212,6 +220,9 @@ body {
   margin: 0 8px;
   box-shadow: 1px 3px 4px gray;
 }
+.unpaind_btn:hover {
+  cursor: pointer;
+}
 
 .component_btn:hover {
   cursor: pointer;
@@ -232,7 +243,6 @@ body {
 
 /* payment */
 .payment_btn {
-  font-family: "Baloo Tammudu 2", cursive;
   padding: 12px 30px;
   color: white;
   background: #2a566b;
